Remove the need for vendor, which enables us to use npm link.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "ace-builds": "ajaxorg/ace-builds",
     "d3": "^3.5.6",
-    "d3-cloud": "jasondavies/d3-cloud",
+    "d3-cloud": "~1.1.0",
     "d3-geo-projection": "^0.2.15",
     "topojson": "^1.6.19",
     "vega": "latest",
@@ -39,8 +39,7 @@
   "scripts": {
     "data": "git subtree pull --prefix app/data git@github.com:vega/vega-datasets.git gh-pages",
     "deploy": "scripts/deploy.sh",
-    "vendor": "npm install && scripts/vendor.sh",
-    "postvendor": "npm run data",
+    "postinstall": "npm run data",
     "watch": "node scripts/watch.js"
   }
 }
