--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "vega": "latest",
     "vega-embed": "latest",
     "vega-lite": "latest",
-    "compassql": "^0.3.0"
+    "compassql": "~0.4.0"
   },
   "devDependencies": {
     "chokidar": "^1.2.0"
