--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "d3-geo-projection": "^0.2.15",
     "topojson": "^1.6.24",
     "vega-datasets": "vega/vega-datasets#gh-pages",
-    "vega": "latest",
+    "vega": "^2.0.0",
     "vega-embed": "latest",
-    "vega-lite": "latest"
+    "vega-lite": "^1.0.0"
   },
   "devDependencies": {
     "chokidar": "^1.2.0"
