--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "d3-geo-projection": "^0.2.15",
     "topojson": "^1.6.24",
     "vega-datasets": "vega/vega-datasets#gh-pages",
-    "vega": "latest",
+    "vega": "^2",
     "vega-embed": "latest",
     "vega-lite": "latest",
     "compassql": "~0.4.0"
