--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "topojson": "^1.6.24",
     "vega": "3.0.0-beta.24",
     "vega-datasets": "vega/vega-datasets#gh-pages",
-    "vega-lite": "^1.0.0"
+    "vega-lite": "2.0.0-alpha.4"
   },
   "devDependencies": {
     "chokidar": "^1.2.0"
