--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "d3-cloud": "^1.2.1",
     "d3-geo-projection": "^0.2.15",
     "topojson": "^1.6.24",
-    "vega": "3.0.0-beta.29",
+    "vega": "3.0.0-beta.30",
     "vega-datasets": "vega/vega-datasets#gh-pages",
-    "vega-lite": "2.0.0-alpha.9"
+    "vega-lite": "2.0.0-beta.1"
   },
   "devDependencies": {
     "chokidar": "^1.2.0"
