--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "redux-thunk": "^2.2.0",
     "vega": "github:vega/vega#v3.0.0-beta.38",
     "vega-datasets": "github:vega/vega-datasets#gh-pages",
-    "vega-lite": "github:vega/vega-lite#v2.0.0-beta.5"
+    "vega-lite": "github:vega/vega-lite#v2.0.0-beta.5",
+    "vega-tooltip": "^0.4.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
