--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^0.2.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "chokidar": "^1.2.0",
     "connect-history-api-fallback": "1.3.0",
@@ -19,7 +18,7 @@
     "cross-spawn": "4.0.0",
     "css-loader": "0.28.4",
     "detect-port": "1.0.0",
-    "dotenv": "^2.0.0",
+    "dotenv": "2.0.0",
     "eslint": "3.5.0",
     "eslint-config-react-app": "^0.2.1",
     "eslint-loader": "1.8.0",
@@ -43,37 +42,40 @@
     "promise": "8.0.1",
     "react-dev-utils": "0.2.1",
     "recursive-readdir": "2.2.1",
-    "rimraf": "2.6.2",
-    "source-map-loader": "0.2.2",
+    "rimraf": "2.6.1",
+    "source-map-loader": "0.2.1",
     "strip-ansi": "3.0.1",
-    "style-loader": "0.19.0",
-    "url-loader": "0.6.2",
+    "style-loader": "0.18.2",
+    "url-loader": "0.5.9",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.1",
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
-    "ajv": "^5.2.3",
-    "d3-request": "1.0.5",
+    "ajv": "^5.2.2",
+    "d3-request": "^1.0.5",
     "deep-equal": "^1.0.1",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-ga": "^2.3.5",
-    "react-monaco-editor": "^0.11.0",
+    "monaco-editor-plus": "^1.0.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-file-reader": "^1.1.1",
+    "react-monaco-editor": "^0.10.0",
+    "react-monaco-editor-plus": "^1.0.3",
     "react-portal": "^3.1.0",
     "react-redux": "^5.0.6",
+    "react-resizable-box": "^2.0.6",
     "react-router": "^3.0.5",
     "react-router-redux": "^4.0.8",
-    "react-split-pane": "^0.1.66",
+    "react-split-pane": "^0.1.65",
     "redux": "^3.7.2",
     "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.2.0",
-    "vega": "github:vega/vega#v3.0.6",
+    "vega": "github:vega/vega#v3.0.1",
     "vega-datasets": "^1.10.0",
-    "vega-lite": "github:vega/vega-lite#v2.0.0-rc4",
+    "vega-lite": "github:vega/vega-lite#v2.0.0-beta.14",
     "vega-schema-url-parser": "^1.0.0-beta.2",
-    "vega-tooltip": "^0.4.4"
+    "vega-tooltip": "^0.4.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -106,14 +108,7 @@
   "babel": {
     "presets": [
       "react-app"
-    ],
-    "env": {
-      "production": {
-        "presets": [
-          "react-optimize"
-        ]
-      }
-    }
+    ]
   },
   "eslintConfig": {
     "extends": [
